--- a/data.html
+++ b/data.html
@@ -282,3 +282,23 @@
 </pre>
 
 </div>
+<h2>Matrix 13</h2>
+
+<div class="graph-container">
+<img src="images/graph13.png" alt="Graph 13">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  
+    _  _  _  _  _  _  _  _  _  
+1 | 0  1  1  1  1  1  1  1  1      x<sub>0</sub> = 2.00
+2 | 1  0  0  0  0  0  0  0  0      x<sub>1</sub> = -2.00
+3 | 1  0  0  0  0  0  0  0  0      x<sub>2</sub> = 0.00
+4 | 1  0  0  0  0  0  0  0  0      x<sub>3</sub> = 0.00
+5 | 1  0  0  0  0  0  0  0  0      x<sub>4</sub> = 0.00
+6 | 0  0  0  0  0  0  0  0  0      x<sub>5</sub> = 0.00
+7 | 0  0  0  0  0  0  0  0  0      x<sub>6</sub> = 0.00
+8 | 0  0  0  0  0  0  0  0  0      x<sub>7</sub> = 0.00
+9 | 0  0  0  0  0  0  0  0  0      x<sub>8</sub> = 0.00
+</pre>
+
+</div>
