added matrix power command

--- a/data.html
+++ b/data.html
@@ -290,15 +290,273 @@
 <pre class="graph-matrix-data">
     1  2  3  4  5  6  7  8  9  
     _  _  _  _  _  _  _  _  _  
-1 | 0  1  1  1  1  1  1  1  1      x<sub>0</sub> = 2.00
-2 | 1  0  0  0  0  0  0  0  0      x<sub>1</sub> = -2.00
-3 | 1  0  0  0  0  0  0  0  0      x<sub>2</sub> = 0.00
+1 | 0  1  1  1  1  1  1  1  1      x<sub>0</sub> = 3.19
+2 | 1  0  1  1  1  1  1  1  1      x<sub>1</sub> = -2.19
+3 | 1  0  0  0  0  0  0  0  0      x<sub>2</sub> = -1.00
 4 | 1  0  0  0  0  0  0  0  0      x<sub>3</sub> = 0.00
 5 | 1  0  0  0  0  0  0  0  0      x<sub>4</sub> = 0.00
-6 | 0  0  0  0  0  0  0  0  0      x<sub>5</sub> = 0.00
-7 | 0  0  0  0  0  0  0  0  0      x<sub>6</sub> = 0.00
-8 | 0  0  0  0  0  0  0  0  0      x<sub>7</sub> = 0.00
-9 | 0  0  0  0  0  0  0  0  0      x<sub>8</sub> = 0.00
+6 | 1  0  0  0  0  0  0  0  0      x<sub>5</sub> = 0.00
+7 | 1  0  0  0  0  0  0  0  0      x<sub>6</sub> = 0.00
+8 | 1  0  0  0  0  0  0  0  0      x<sub>7</sub> = 0.00
+9 | 1  0  0  0  0  0  0  0  0      x<sub>8</sub> = 0.00
+</pre>
+
+</div>
+<h2>Matrix 14</h2>
+
+<div class="graph-container">
+<img src="images/graph14.png" alt="Graph 14">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  
+    _  _  _  _  _  _  _  _  _  
+1 | 0  1  1  1  1  1  1  1  1      x<sub>0</sub> = 4.27
+2 | 1  0  1  1  1  1  1  1  1      x<sub>1</sub> = -1.00
+3 | 1  1  0  0  0  0  0  0  0      x<sub>2</sub> = -3.27
+4 | 1  1  0  0  0  0  0  0  0      x<sub>3</sub> = 0.00
+5 | 1  1  0  0  0  0  0  0  0      x<sub>4</sub> = 0.00
+6 | 1  1  0  0  0  0  0  0  0      x<sub>5</sub> = 0.00
+7 | 1  1  0  0  0  0  0  0  0      x<sub>6</sub> = 0.00
+8 | 1  1  0  0  0  0  0  0  0      x<sub>7</sub> = 0.00
+9 | 1  1  0  0  0  0  0  0  0      x<sub>8</sub> = 0.00
+</pre>
+
+</div>
+<h2>Matrix 15</h2>
+
+<div class="graph-container">
+<img src="images/graph15.png" alt="Graph 15">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  
+    _  _  _  _  _  _  _  _  _  
+1 | 0  1  1  1  1  1  1  1  1      x<sub>0</sub> = -2.7320508075688794
+2 | 1  0  1  0  0  0  0  0  0      x<sub>1</sub> = 2.9999999999999973
+3 | 1  1  0  0  0  0  0  0  0      x<sub>2</sub> = 0.732050807568877
+4 | 1  0  0  0  0  0  0  0  0      x<sub>3</sub> = -1.0000000000000002
+5 | 1  0  0  0  0  0  0  0  0      x<sub>4</sub> = -3.851859888774472e-33
+6 | 1  0  0  0  0  0  0  0  0      x<sub>5</sub> = -1.1331166295921011e-17
+7 | 1  0  0  0  0  0  0  0  0      x<sub>6</sub> = 0.0
+8 | 1  0  0  0  0  0  0  0  0      x<sub>7</sub> = 0.0
+9 | 1  0  0  0  0  0  0  0  0      x<sub>8</sub> = 0.0
+</pre>
+
+</div>
+<h2>Matrix 16</h2>
+
+<div class="graph-container">
+<img src="images/graph16.png" alt="Graph 16">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  
+    _  _  _  _  _  _  _  _  _  
+1 | 0  1  1  1  1  1  1  1  1      x<sub>0</sub> = 3.38+0.00j
+2 | 1  0  1  0  0  0  0  0  0      x<sub>1</sub> = -2.57+0.00j
+3 | 1  1  0  0  0  0  0  0  1      x<sub>2</sub> = -0.59+0.00j
+4 | 1  0  0  0  0  0  0  0  0      x<sub>3</sub> = 0.78+0.00j
+5 | 1  0  0  0  0  0  0  0  0      x<sub>4</sub> = -1.62+0.00j
+6 | 1  0  0  0  0  0  0  0  0      x<sub>5</sub> = 0.62+0.00j
+7 | 1  0  0  0  0  0  0  0  0      x<sub>6</sub> = 0.00+0.00j
+8 | 1  0  0  0  0  0  0  0  1      x<sub>7</sub> = 0.00-0.00j
+9 | 1  0  1  0  0  0  0  1  0      x<sub>8</sub> = 0.00+0.00j
+</pre>
+
+</div>
+<h2>Matrix 17</h2>
+
+<div class="graph-container">
+<img src="images/graph17.png" alt="Graph 17">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  
+    _  _  _  _  _  _  _  _  _  
+1 | 0  1  1  1  1  1  1  1  1      x<sub>0</sub> = 3.50+0.00j
+2 | 1  0  1  0  1  0  0  0  0      x<sub>1</sub> = -2.43+0.00j
+3 | 1  1  0  0  0  0  0  0  1      x<sub>2</sub> = -1.67+0.00j
+4 | 1  0  1  0  0  0  0  0  0      x<sub>3</sub> = 0.74+0.00j
+5 | 1  0  0  0  0  0  0  0  0      x<sub>4</sub> = 0.27+0.26j
+6 | 1  0  0  0  0  0  0  0  0      x<sub>5</sub> = 0.27-0.26j
+7 | 1  0  0  0  0  0  0  0  0      x<sub>6</sub> = -0.68+0.00j
+8 | 1  0  0  0  0  0  0  0  1      x<sub>7</sub> = -0.00+0.00j
+9 | 1  0  1  0  0  0  0  1  0      x<sub>8</sub> = -0.00+0.00j
+</pre>
+
+</div>
+<h2>Matrix 18</h2>
+
+<div class="graph-container">
+<img src="images/graph18.png" alt="Graph 18">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  
+    _  _  _  _  
+1 | 1  1  1  0      x<sub>0</sub> = -1.81
+2 | 1  0  0  1      x<sub>1</sub> = 2.34
+3 | 1  0  0  1      x<sub>2</sub> = 0.47
+4 | 0  1  1  0      x<sub>3</sub> = 0.00
+</pre>
+
+</div>
+<h2>Matrix 19</h2>
+
+<div class="graph-container">
+<img src="images/graph19.png" alt="Graph 19">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  
+    _  _  _  _  
+1 | 0  1  1  0      x<sub>0</sub> = -2.00
+2 | 1  0  0  1      x<sub>1</sub> = 0.00
+3 | 1  0  0  1      x<sub>2</sub> = 2.00
+4 | 0  1  1  0      x<sub>3</sub> = 0.00
+</pre>
+
+</div>
+<h2>Matrix 20</h2>
+
+<div class="graph-container">
+<img src="images/graph20.png" alt="Graph 20">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  
+    _  _  _  _  _  _  _  _  _  
+1 | 0  1  1  1  1  1  1  1  1      x<sub>0</sub> = 3.52+0.00j
+2 | 1  0  1  0  0  0  0  0  0      x<sub>1</sub> = -2.54+0.00j
+3 | 1  1  0  0  1  0  0  0  1      x<sub>2</sub> = -1.55+0.00j
+4 | 1  0  1  0  0  0  0  0  0      x<sub>3</sub> = 0.70+0.00j
+5 | 1  0  0  0  0  0  0  0  0      x<sub>4</sub> = -0.40+0.00j
+6 | 1  0  0  0  0  0  0  0  0      x<sub>5</sub> = 0.26+0.00j
+7 | 1  0  0  0  0  0  0  0  0      x<sub>6</sub> = 0.00+0.00j
+8 | 1  0  0  0  0  0  0  0  1      x<sub>7</sub> = -0.00+0.00j
+9 | 1  0  1  0  0  0  0  1  0      x<sub>8</sub> = -0.00-0.00j
+</pre>
+
+</div>
+<h2>Matrix 21</h2>
+
+<div class="graph-container">
+<img src="images/graph21.png" alt="Graph 21">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  
+    _  _  _  _  _  _  _  _  _  
+1 | 0  1  1  1  1  1  1  1  1      x<sub>0</sub> = 3.61+0.00j
+2 | 1  0  1  0  0  0  0  0  0      x<sub>1</sub> = -2.42+0.00j
+3 | 1  1  0  0  1  0  0  0  1      x<sub>2</sub> = -1.54+0.00j
+4 | 1  0  1  0  0  0  0  0  0      x<sub>3</sub> = 1.16+0.00j
+5 | 1  0  0  0  0  0  0  0  0      x<sub>4</sub> = -0.23+0.22j
+6 | 1  0  0  0  0  0  1  0  0      x<sub>5</sub> = -0.23-0.22j
+7 | 1  0  0  0  0  1  0  0  0      x<sub>6</sub> = 0.65+0.00j
+8 | 1  0  0  0  0  0  0  0  1      x<sub>7</sub> = -1.00+0.00j
+9 | 1  0  1  0  0  0  0  1  0      x<sub>8</sub> = -0.00+0.00j
+</pre>
+
+</div>
+<h2>Matrix 22</h2>
+
+<div class="graph-container">
+<img src="images/graph22.png" alt="Graph 22">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  10  
+    _  _  _  _  _  _  _  _  _  _  
+1 | 0  1  0  0  0  0  0  0  1  1      x<sub>0</sub> = 1.73
+2 | 1  0  0  0  0  0  0  0  0  0      x<sub>1</sub> = -1.73
+3 | 0  0  0  0  0  0  0  0  0  0      x<sub>2</sub> = 0.00
+4 | 0  0  0  0  0  0  0  0  0  0      x<sub>3</sub> = 0.00
+5 | 0  0  0  0  0  0  0  0  0  0      x<sub>4</sub> = 0.00
+6 | 0  0  0  0  0  0  0  0  0  0      x<sub>5</sub> = 0.00
+7 | 0  0  0  0  0  0  0  0  0  0      x<sub>6</sub> = 0.00
+8 | 0  0  0  0  0  0  0  0  0  0      x<sub>7</sub> = 0.00
+9 | 1  0  0  0  0  0  0  0  0  0      x<sub>8</sub> = 0.00
+10 | 1  0  0  0  0  0  0  0  0  0      x<sub>9</sub> = 0.00
+</pre>
+
+</div>
+<h2>Matrix 23</h2>
+
+<div class="graph-container">
+<img src="images/graph23.png" alt="Graph 23">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  10  
+    _  _  _  _  _  _  _  _  _  _  
+1 | 0  1  0  0  0  0  0  0  1  1      x<sub>0</sub> = 1.73
+2 | 1  0  0  0  0  0  0  0  0  0      x<sub>1</sub> = -1.73
+3 | 0  0  0  0  0  0  0  0  0  0      x<sub>2</sub> = 0.00
+4 | 0  0  0  0  0  0  0  0  0  0      x<sub>3</sub> = 0.00
+5 | 0  0  0  0  0  0  0  0  0  0      x<sub>4</sub> = 0.00
+6 | 0  0  0  0  0  0  0  0  0  0      x<sub>5</sub> = 0.00
+7 | 0  0  0  0  0  0  0  0  0  0      x<sub>6</sub> = 0.00
+8 | 0  0  0  0  0  0  0  0  0  0      x<sub>7</sub> = 0.00
+9 | 1  0  0  0  0  0  0  0  0  0      x<sub>8</sub> = 0.00
+10 | 1  0  0  0  0  0  0  0  0  0      x<sub>9</sub> = 0.00
+</pre>
+
+</div>
+<h2>Matrix 24</h2>
+
+<div class="graph-container">
+<img src="images/graph24.png" alt="Graph 24">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  
+    _  _  _  _  _  
+1 | 0  0  1  1  0      x<sub>0</sub> = 3.00
+2 | 0  0  1  1  0      x<sub>1</sub> = -2.00
+3 | 1  1  0  1  1      x<sub>2</sub> = -0.00
+4 | 1  1  1  0  1      x<sub>3</sub> = 0.00
+5 | 0  0  1  1  0      x<sub>4</sub> = -1.00
+</pre>
+
+</div>
+<h2>Matrix 25</h2>
+
+<div class="graph-container">
+<img src="images/graph25.png" alt="Graph 25">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  
+    _  _  _  _  _  
+1 | 0  1  0  0  1      x<sub>0</sub> = -1.62
+2 | 1  0  1  0  0      x<sub>1</sub> = 0.62
+3 | 0  1  0  1  0      x<sub>2</sub> = 2.00
+4 | 0  0  1  0  1      x<sub>3</sub> = -1.62
+5 | 1  0  0  1  0      x<sub>4</sub> = 0.62
+</pre>
+
+</div>
+<h2>Matrix 26</h2>
+
+<div class="graph-container">
+<img src="images/graph26.png" alt="Graph 26">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  
+    _  _  _  _  _  _  
+1 | 0  0  1  1  0  1      x<sub>0</sub> = 3.51
+2 | 0  0  1  1  0  0      x<sub>1</sub> = -2.18
+3 | 1  1  0  1  1  1      x<sub>2</sub> = 0.67
+4 | 1  1  1  0  1  0      x<sub>3</sub> = -0.00
+5 | 0  0  1  1  0  1      x<sub>4</sub> = -0.53
+6 | 1  0  1  0  1  0      x<sub>5</sub> = -1.48
+</pre>
+
+</div>
+<h2>Matrix 27</h2>
+
+<div class="graph-container">
+<img src="images/graph27.png" alt="Graph 27">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  
+    _  _  _  _  _  _  
+1 | 0  0  0  1  0  1      x<sub>0</sub> = 3.17
+2 | 0  0  1  1  0  0      x<sub>1</sub> = -2.21
+3 | 0  1  0  1  1  1      x<sub>2</sub> = -1.51
+4 | 1  1  1  0  1  0      x<sub>3</sub> = 0.73
+5 | 0  0  1  1  0  1      x<sub>4</sub> = 0.28
+6 | 1  0  1  0  1  0      x<sub>5</sub> = -0.47
 </pre>
 
 </div>
