--- a/data.html
+++ b/data.html
@@ -560,3 +560,162 @@
 </pre>
 
 </div>
+<h2>Matrix 28</h2>
+
+<div class="graph-container">
+<img src="images/graph28.png" alt="Graph 28">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  
+    _  _  _  _  _  _  
+1 | 0  0  1  1  0  1      x<sub>0</sub> = 3.51
+2 | 0  0  1  1  0  0      x<sub>1</sub> = -2.18
+3 | 1  1  0  1  1  1      x<sub>2</sub> = 0.67
+4 | 1  1  1  0  1  0      x<sub>3</sub> = -0.00
+5 | 0  0  1  1  0  1      x<sub>4</sub> = -0.53
+6 | 1  0  1  0  1  0      x<sub>5</sub> = -1.48
+</pre>
+
+</div>
+<h2>Matrix 29</h2>
+
+<div class="graph-container">
+<img src="images/graph29.png" alt="Graph 29">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  
+    _  _  _  _  _  _  
+1 | 0  1  1  0  1  0      x<sub>0</sub> = 2.25
+2 | 1  0  0  0  0  0      x<sub>1</sub> = -2.25
+3 | 1  0  0  1  0  1      x<sub>2</sub> = 0.80
+4 | 0  0  1  0  0  0      x<sub>3</sub> = 0.55
+5 | 1  0  0  0  0  1      x<sub>4</sub> = -0.80
+6 | 0  0  1  0  1  0      x<sub>5</sub> = -0.55
+</pre>
+
+</div>
+<h2>Matrix 30</h2>
+
+<div class="graph-container">
+<img src="images/graph30.png" alt="Graph 30">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  
+    _  _  _  _  _  _  
+1 | 0  1  0  0  1  1      x<sub>0</sub> = -2.24
+2 | 1  0  0  0  0  0      x<sub>1</sub> = -1.00
+3 | 0  0  0  1  1  1      x<sub>2</sub> = 2.24
+4 | 0  0  1  0  0  0      x<sub>3</sub> = 1.00
+5 | 1  0  1  0  0  0      x<sub>4</sub> = 0.00
+6 | 1  0  1  0  0  0      x<sub>5</sub> = 0.00
+</pre>
+
+</div>
+<h2>Matrix 31</h2>
+
+<div class="graph-container">
+<img src="images/graph31.png" alt="Graph 31">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  6  7  8  9  10  11  12  
+    _  _  _  _  _  _  _  _  _  _  _  _  
+1 | 0  1  1  0  1  0  0  0  0  0  0  0      x<sub>0</sub> = 2.25
+2 | 1  0  0  0  0  0  0  0  0  0  0  0      x<sub>1</sub> = -2.25
+3 | 1  0  0  1  0  1  0  0  0  0  0  0      x<sub>2</sub> = 0.80
+4 | 0  0  1  0  0  0  0  0  0  0  0  0      x<sub>3</sub> = 0.55
+5 | 1  0  0  0  0  1  0  0  0  0  0  0      x<sub>4</sub> = -0.80
+6 | 0  0  1  0  1  0  0  0  0  0  0  0      x<sub>5</sub> = -0.55
+7 | 0  0  0  0  0  0  0  1  0  0  1  1      x<sub>6</sub> = -2.24
+8 | 0  0  0  0  0  0  1  0  0  0  0  0      x<sub>7</sub> = -1.00
+9 | 0  0  0  0  0  0  0  0  0  1  1  1      x<sub>8</sub> = 2.24
+10 | 0  0  0  0  0  0  0  0  1  0  0  0      x<sub>9</sub> = 1.00
+11 | 0  0  0  0  0  0  1  0  1  0  0  0      x<sub>10</sub> = 0.00
+12 | 0  0  0  0  0  0  1  0  1  0  0  0      x<sub>11</sub> = 0.00
+</pre>
+
+</div>
+<h2>Matrix 32</h2>
+
+<div class="graph-container">
+<img src="images/graph32.png" alt="Graph 32">
+
+<pre class="graph-matrix-data">
+    1  2  3  
+    _  _  _  
+1 | 1  1  1      x<sub>0</sub> = -0.00
+2 | 1  1  1      x<sub>1</sub> = 3.00
+3 | 1  1  1      x<sub>2</sub> = 0.00
+</pre>
+
+</div>
+<h2>Matrix 33</h2>
+
+<div class="graph-container">
+<img src="images/graph33.png" alt="Graph 33">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  
+    _  _  _  _  
+1 | 1  1  1  1      x<sub>0</sub> = -0.30
+2 | 1  0  1  1      x<sub>1</sub> = 3.30
+3 | 1  1  0  1      x<sub>2</sub> = -1.00
+4 | 1  1  1  0      x<sub>3</sub> = -1.00
+</pre>
+
+</div>
+<h2>Matrix 34</h2>
+
+<div class="graph-container">
+<img src="images/graph34.png" alt="Graph 34">
+
+<pre class="graph-matrix-data">
+    1  2  3  
+    _  _  _  
+1 | 1  1  1      x<sub>0</sub> = 2.41
+2 | 1  0  1      x<sub>1</sub> = -0.41
+3 | 1  1  0      x<sub>2</sub> = -1.00
+</pre>
+
+</div>
+<h2>Matrix 35</h2>
+
+<div class="graph-container">
+<img src="images/graph35.png" alt="Graph 35">
+
+<pre class="graph-matrix-data">
+    1  2  3  4  5  
+    _  _  _  _  _  
+1 | 0  1  0  0  0      x<sub>0</sub> = 1.00
+2 | 1  0  0  0  0      x<sub>1</sub> = -1.00
+3 | 0  0  0  1  1      x<sub>2</sub> = -1.00
+4 | 0  0  1  0  1      x<sub>3</sub> = 2.00
+5 | 0  0  1  1  0      x<sub>4</sub> = -1.00
+</pre>
+
+</div>
+<h2>Matrix 36</h2>
+
+<div class="graph-container">
+<img src="images/graph36.png" alt="Graph 36">
+
+<pre class="graph-matrix-data">
+    1  2  3  
+    _  _  _  
+1 | 1  1  0      x<sub>0</sub> = -1.25
+2 | 1  0  1      x<sub>1</sub> = 1.80
+3 | 0  1  0      x<sub>2</sub> = 0.45
+</pre>
+
+</div>
+<h2>Matrix 37</h2>
+
+<div class="graph-container">
+<img src="images/graph37.png" alt="Graph 37">
+
+<pre class="graph-matrix-data">
+    1  
+    _  
+1 | 1      x<sub>0</sub> = 1.00
+</pre>
+
+</div>
